[gd_scene load_steps=3 format=2]

[ext_resource path="res://spelunkid_font.tres" type="BitmapFont" id=1]
[ext_resource path="res://WaveformOptions.gd" type="Script" id=2]

[node name="Options" type="VBoxContainer"]
anchor_right = 1.0
margin_top = 84.0
margin_bottom = 303.0
custom_constants/separation = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineSep" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )

[node name="lblFeedback" type="Label" parent="."]
margin_top = 9.0
margin_right = 1024.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )
text = "Feedback:  0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FB" type="HSlider" parent="."]
margin_top = 25.0
margin_right = 1024.0
margin_bottom = 41.0
max_value = 8.0
step = 0.05
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblDuty" type="Label" parent="."]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 1 )
text = "Duty Cycle:  0.5"
align = 1

[node name="DutyCycle" type="HSlider" parent="."]
margin_top = 65.0
margin_right = 1024.0
margin_bottom = 81.0
max_value = 1.0
step = 0.01
value = 0.5
tick_count = 11
ticks_on_borders = true

[node name="LineSep2" type="Panel" parent="."]
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 1 )

[node name="Spacer" type="Control" parent="."]
margin_top = 98.0
margin_right = 1024.0
margin_bottom = 98.0

[node name="chkReflect" type="CheckButton" parent="."]
margin_top = 106.0
margin_right = 1024.0
margin_bottom = 146.0
text = "Reflect waveform"

[node name="LineSep3" type="Panel" parent="."]
margin_top = 154.0
margin_right = 1024.0
margin_bottom = 155.0
rect_min_size = Vector2( 0, 1 )

[node name="OscBank" type="HBoxContainer" parent="."]
margin_top = 163.0
margin_right = 1024.0
margin_bottom = 187.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OscBank"]
margin_top = 5.0
margin_right = 946.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = " Custom Oscillator Waveform Bank #"

[node name="SpinBox" type="SpinBox" parent="OscBank"]
margin_left = 950.0
margin_right = 1024.0
margin_bottom = 24.0
align = 2
editable = false

[node name="ModBank" type="HBoxContainer" parent="."]
margin_top = 195.0
margin_right = 1024.0
margin_bottom = 219.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ModBank"]
margin_top = 5.0
margin_right = 946.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = " Custom Phase Modulation Technique #  "

[node name="SpinBox" type="SpinBox" parent="ModBank"]
margin_left = 950.0
margin_right = 1024.0
margin_bottom = 24.0
align = 2
editable = false
[connection signal="value_changed" from="FB" to="." method="_on_FB_value_changed"]
[connection signal="value_changed" from="DutyCycle" to="." method="_on_DutyCycle_value_changed"]
[connection signal="toggled" from="chkReflect" to="." method="_on_chkReflect_toggled"]
